Was missing bold fonts. Tried to include them automatically. Does not work yet. Had to install them locally.

--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -14,9 +14,32 @@
 % UBUNTU FONT CAN BE DOWNLOADED FROM HERE: http://font.ubuntu.com
 %
 \usepackage{fontspec}
-\setmainfont[Ligatures = TeX]{Ubuntu-R.ttf}
-\setmonofont[Ligatures = TeX]{Ubuntu-M.ttf}
 
+\setmainfont{Ubuntu}
+%[
+%  Ligatures=TeX,
+%  Path=fonts/,
+%  Extension=.ttf,
+%  UprightFont=*-R,
+%  ItalicFont=*-I,
+%  BoldFont=*-B,
+%  BoldItalicFont=*-BI,
+%  FontFace={l}{n}{*-L},
+%  FontFace={l}{it}{*-LI},
+%  FontFace={mb}{n}{*-M},
+%  FontFace={mb}{it}{*-MI},
+%  FontFace={k}{n}{*-B},
+%  FontFace={k}{it}{*-BI}
+%]
+\setmonofont{Ubuntu Mono}
+%[
+%  Ligatures=TeX,
+%  Path=fonts/,
+%  Extension=.ttf,
+%  UprightFont=*-R,
+%  BoldFont=*-B,
+%  BoldItalicFont=*-BI
+%]
 % math fonts
 %\usepackage[math-style=TeX]{unicode-math}
 %\setmathfont{Cambria Math}
