--- a/Handout/handout_content.tex
+++ b/Handout/handout_content.tex
@@ -29,13 +29,14 @@ on Mac you call
 \item the KNIME installer: \directory{\MacKnimeInstallerName}
 \end{itemize}
 
-and follow the instructions. If you are working through this tutorial at home or downloaded it from our homepage, you can get the installers here:
+and follow the instructions. If you are working through this tutorial at home or downloaded it from our homepage, you can get the installers under the
+following links:
 \begin{itemize}
-\item OpenMS: www.openms.de/downloads
-\item KNIME: https://www.knime.org/downloads/overview
-\item OpenMS prerequisites (Windows-only): After installation, before your first use of the OpenMS plugin in KNIME you will be asked to download it automatically if certain requirements are not found in your Windows registry. Alternatively, you can get a bundled version \hyperref{\WindowsPrerequisitesLink}{here}.
+\item \href{http://www.openms.de/downloads}{OpenMS}
+\item \href{https://www.knime.org/downloads/overview}{KNIME}
+\item OpenMS prerequisites (Windows-only): After installation, before your first use of the OpenMS plugin in KNIME you will be asked to download it automatically if certain requirements are not found in your Windows registry. Alternatively, you can get a bundled version \href{\WindowsPrerequisitesLink}{here}.
 \end{itemize}
-Choose the installers for the platform you are working on. We suggest to use the full installers so that you can skip the installation of the OpenMS plugin and other dependencies for the example workflows.
+Choose the installers for the platform you are working on. We suggest to use the full installers of KNIME so that you can skip the installation of the OpenMS plugin and other dependencies for the example workflows.
 
 \subsection{Data conversion}
 \label{Data_Conversion}
@@ -122,7 +123,7 @@ process, in order to make it more difficult to create an invalid workflow.
 Throughout most of the parts of this tutorial you will use KNIME to create and
 execute workflows. This first step is to make yourself familiar with KNIME. Additional
 information on basic usage of KNIME can be found on the KNIME
-\hyperref{https://tech.knime.org/knime}{Getting Started page}. However,
+\href{https://tech.knime.org/knime}{Getting Started page}. However,
 the most important concepts will also be reviewed in this tutorial.
 
 \subsubsection{Plugin and dependency installation}
@@ -294,7 +295,7 @@ KNIME will export workflows as a zip file containing all the information on node
 Those zip files can again be imported by selecting \menu{File > Import KNIME Workflow...}.
 
 \note{For your convenience we added all workflows discussed in this tutorial to the \directory{Workflows} folder on the USB Stick. Additionally the
-zip files can be found on our \hyperref{https://github.com/OpenMS/Tutorials}{GitHub repository}.
+zip files can be found on our \href{https://github.com/OpenMS/Tutorials}{GitHub repository}.
 If you want to check your own workflow by comparing it to the solution or got stuck, simply import the full workflow from the corresponding zip file.}
 
 \subsubsection{Duplicating workflows}
