--- a/Handout/qualitycontrol.tex
+++ b/Handout/qualitycontrol.tex
@@ -81,7 +81,7 @@ Find your first created qcML file and open it with the browser (not IE), and the
 \label{Adding brand new QC metrics}
 
 We can also add brand new QC metrics to our qcML files. Remember the \KNIMENODE{Histogram} you added inside the \KNIMENODE{ZipLoop} during the label-free quantitation section? %TODO reference
- Let's imagine for a moment this was a brand new and utterly important metric and plot for the assessment of your analyses quality. There is an easy way to pick up such new finds along the workflow into your qcMLs. Though the \KNIMENODE{Histogram} node cannot pass its plot to an \textit{image}, we will do with a \KNIMENODE{R View (table)}. 
+ Let's imagine for a moment this was a brand new and utterly important metric and plot for the assessment of your analyses quality. There is an easy way to integrate such new metrics into your qcMLs. Though the \KNIMENODE{Histogram} node cannot pass its plot to an \textit{image}, we can do so with a \KNIMENODE{R View (table)}. 
 
 \begin{itemize}
 \item Add an \KNIMENODE{R View (table)} next to the \KNIMENODE{IDTextReader} node and connect them.
