added de.NBI logo and made some minor corrections

--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -200,12 +200,13 @@
 			results of data processing using TOPP can be visualized using TOPPView~\cite{Sturm2009}.
 \item This tutorial was designed for use in a hands-on tutorial session but can also be worked through at home using the online resources. You will become familiar with some of the basic functionalities of OpenMS/TOPP, TOPPView, and KNIME
       and learn how to use a selection of TOPP tools used in the tutorial workflows.
-\item All sample data referenced in this tutorial can be found in the \directory{Example\_Data} folder on the USB stick that came with this tutorial (or online on our \hyperlink{https://sourceforge.net/p/open-ms/code/HEAD/tree/Tutorials/UM_2015/Example_Data/}{SourceForge}).
+\item All sample data referenced in this tutorial can be found in the \directory{Example\_Data} folder on the USB stick that came with this tutorial (or released online on our github page
+\hyperlink{https://github.com/OpenMS/Tutorials/releases}{OpenMS/Tutorials}).
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\newpage
-\include{handout_content}
+\include{gettingstarted}
 
 \include{labelfree}
 
