--- a/Handout/labelfree.tex
+++ b/Handout/labelfree.tex
@@ -1,7 +1,7 @@
 %!TEX root = handout.tex
 
 \newpage
-\section{Label-free quantification}
+\section{Label-free quantification of peptides}
 \label{sec:lfq}
 
 \subsection{Introduction}
