--- a/Handout/metabolomics.tex
+++ b/Handout/metabolomics.tex
@@ -1,7 +1,7 @@
 %!TEX root = handout.tex
 
 \newpage
-\section{Metabolomics}
+\section{Label-free quantification of metabolites}
 
 \subsection{Introduction}
 Quantitation and identification of chemical compounds are basic tasks in metabolomic studies. In this tutorial session we construct a UPLC-MS based, label-free quantitation and identification workflow. Following quantitation and identification we then perform statistical downstream analysis to detect quantitation values that differ significantly between two conditions. This approach can, for example, be used to detect biomarkers. Here, we use two spike-in conditions of a dilution series (0.5 mg/l and 10.0 mg/l, male blood background, measured in triplicates) comprising seven isotopically labeled compounds. The goal of this tutorial is to detect and quantify these differential spike-in compounds against the complex background.
